Experimental code to learn Objective-C. A first attempt to convert native blur effect code into JNA calls based on the Objective-C runtime.